crates/oxidd-derive/tests/function/enum_union.rs
use oxidd_derive::Function;

#[derive(Function)]
enum Foo {}

#[derive(Function)]
union Bar {
    x: u32,
    y: bool,
}

fn main() {}
